SegmentDragHandles: fix overlapping drag handles at small segment widths

--- a/assets/css/_segment.scss
+++ b/assets/css/_segment.scss
@@ -177,166 +177,6 @@ body.segment-resize-dragging * {
   }
 }
 
-.segment[width='1'] .drag-handle {
-  &.left {
-    left: -5px - 24px;
-  }
-
-  &.right {
-    right: -5px - 24px;
-  }
-}
-
-.segment[width='1.25'] .drag-handle {
-  &.left {
-    left: -5px - 22.5px;
-  }
-
-  &.right {
-    right: -5px - 22.5px;
-  }
-}
-
-.segment[width='1.5'] .drag-handle {
-  &.left {
-    left: -5px - 21px;
-  }
-
-  &.right {
-    right: -5px - 21px;
-  }
-}
-
-.segment[width='1.75'] .drag-handle {
-  &.left {
-    left: -5px - 19.5px;
-  }
-
-  &.right {
-    right: -5px - 19.5px;
-  }
-}
-
-.segment[width='2'] .drag-handle {
-  &.left {
-    left: -5px - 18px;
-  }
-
-  &.right {
-    right: -5px - 18px;
-  }
-}
-
-.segment[width='2.25'] .drag-handle {
-  &.left {
-    left: -5px - 16.5px;
-  }
-
-  &.right {
-    right: -5px - 16.5px;
-  }
-}
-
-.segment[width='2.5'] .drag-handle {
-  &.left {
-    left: -5px - 15px;
-  }
-
-  &.right {
-    right: -5px - 15px;
-  }
-}
-
-.segment[width='2.75'] .drag-handle {
-  &.left {
-    left: -5px - 13.5px;
-  }
-
-  &.right {
-    right: -5px - 13.5px;
-  }
-}
-
-.segment[width='3'] .drag-handle {
-  &.left {
-    left: -5px - 12px;
-  }
-
-  &.right {
-    right: -5px - 12px;
-  }
-}
-
-.segment[width='3.25'] .drag-handle {
-  &.left {
-    left: -5px - 10.5px;
-  }
-
-  &.right {
-    right: -5px - 10.5px;
-  }
-}
-
-.segment[width='3.5'] .drag-handle {
-  &.left {
-    left: -5px - 9px;
-  }
-
-  &.right {
-    right: -5px - 9px;
-  }
-}
-
-.segment[width='3.75'] .drag-handle {
-  &.left {
-    left: -5px - 7.5px;
-  }
-
-  &.right {
-    right: -5px - 7.5px;
-  }
-}
-
-.segment[width='4'] .drag-handle {
-  &.left {
-    left: -5px - 6px;
-  }
-
-  &.right {
-    right: -5px - 6px;
-  }
-}
-
-.segment[width='4.25'] .drag-handle {
-  &.left {
-    left: -5px - 4.5px;
-  }
-
-  &.right {
-    right: -5px - 4.5px;
-  }
-}
-
-.segment[width='4.5'] .drag-handle {
-  &.left {
-    left: -5px - 3px;
-  }
-
-  &.right {
-    right: -5px - 3px;
-  }
-}
-
-.segment[width='4.75'] .drag-handle {
-  &.left {
-    left: -5px - 1.5px;
-  }
-
-  &.right {
-    right: -5px - 1.5px;
-  }
-}
-
 .segment .drag-handle {
   pointer-events: none;
   transition: transform 150ms, opacity 150ms;
